<resources>
    <string name="app_name">CUIDAR</string>
    <string name="welcome">Bem-Vindo!</string>
    <string name="welcomeDescription">Nosso serviço vai te auxiliar nos exercícios com seu filho!</string>
    <string name="welcomeButton">Vamos lá?</string>
    <string name="logoDescription">CER\'s logo</string>
    <string name="emilInputHint">Digite seu e-mail</string>
    <string name="passwordInputHint">Digite sua senha</string>
    <string name="forgetPasswordText">Esqueci a senha!</string>
    <string name="rememberMeText">Lembrar de mim</string>
    <string name="inButton">Entrar</string>
    <string name="regiterButton">Cadastrar agora?</string>
    <string name="registerText">Cadastro</string>
    <string name="registerPageDescription">Aqui basta você colocar seus dados pessoais!</string>
    <string name="nameInputHint">NOME</string>
    <string name="lastNameInputHint">SOBRENOME</string>
    <string name="ageInputHint">DATA DE NASCIMENTO</string>
    <string name="phoneInputHint">TELEFONE</string>
    <string name="emailRegisterInputHint">E-MAIL</string>
    <string name="passwordRegisterInputHint">SENHA</string>
    <string name="registerPageButton">Concluir</string>
    <string name="editRegisterButton">Editar</string>
    <string name="profileLogoDescription">Imagen padrão do perfil</string>
    <string name="menuTitle">Menu Inicial</string>
    <string name="titlePageStyle">bold</string>
    <string name="textStyle">bold</string>
    <string name="exitText">Sair</string>
    <string name="menuPageDescription">Nesta página, você escolhe para onde deseja ir.</string>
    <string name="activitiesText">Atividades</string>
    <string name="optionActivitiesDescription">Aqui você pode escolher entre refeições, higiene e roupas</string>
    <string name="optionIconDescription">ícone da opção</string>
    <string name="optionButtonText">Iniciar</string>
    <string name="dailyLifeTitle">Vida Diária</string>
    <string name="dailyLifePageDescription">Qual atividade você irá escolher agora?</string>
    <string name="mealsTitle">Refeições</string>
    <string name="MealsPageDescription">Aqui você pode escolher qual o alimento será utilizado!</string>
    <string name="hygineTitle">Higiene</string>
    <string name="higynePageDescription">Aqui você pode escolhe qual parte será higienizada!</string>
    <string name="clothesTitle">Roupa</string>
    <string name="clothesPageDescription">Aqui você pode escolher qual peça de roupa será utilizada.</string>
    <string name="solidPageTitle">Sólidas</string>
    <string name="solidPageSubtitle">Refeições</string>
    <string name="solidPageDescription">Esta atividade é responsável por estímulos motores, sensoriais e também corporais.</string>
    <string name="letsGoStepButton">Vamos lá!</string>
    <string name="stepImageDescription">Icon of the action</string>
    <string name="stepNameDefault">Etapa</string>
    <string name="nextStepButtonText">Próximo passo</string>
    <string name="beforeStepButton">Anterior</string>
    <string name="stepDefaultDescription">Descrição</string>
    <string name="bodyPageTitle">Corpo</string>
    <string name="bodyPageSubtitle">Higiene</string>
    <string name="bodyPageDescription">Nesta atividade será trabalhado os estímulos motores, sensoriais, como também tatéis!</string>
    <string name="pastyPageTitle">Pastosas</string>
    <string name="liquidPageTitle">Líquidos</string>
    <string name="shirtPageTitle">Blusa</string>
    <string name="shiertPageSubtitle">Roupa</string>
    <string name="shirtPageDescription">Esta atividade fica responsável por estímulos motores, sensoriais e também tatéis!</string>
    <string name="pantsPageTitle">Calça</string>
    <string name="controlPageTitle">Controle</string>
    <string name="controlPageDescription">Aqui você pode ver quantas vezes você repetiu cada tarefa nesse mês!</string>
    <string name="sendEmailMainText">Coloque seu email</string>
    <string name="sendEmailDescription">Informe o endereço de email cadastrado. você recebera por email  um código para recuperar sua senha.</string>
    <string name="send_email_button_text">Enviar</string>
    <string name="blue_triangle_description">A blue triangle</string>
    <string name="pink_triangle_description">A pink triangle</string>
    <string name="back_text">Voltar</string>
    <string name="verify_code_title">Coloque o código</string>
    <string name="verify_code_description">Informe o código que enviamos para seu email.</string>
    <string name="verify_code_input_hint">Digite o código</string>
    <string name="verify_code_button_text">Verificar</string>
    <string name="change_password_title">Nova Senha</string>
    <string name="change_password_description">Aqui você pode escolher qual vai ser sua nova senha de acesso.</string>
    <string name="change_password_button_text">Pronto</string>
    <string name="change_password_input1_hint">Digite sua nova senha</string>
    <string name="changes_password_input2_hint">Digite-a novamente</string>
    <string name="confirmPasswordEditInput">CONFIRMAR SENHA</string>
    <string name="cityHintEdit">CIDADE</string>
    <string name="stateHintEdit">ESTADO</string>
    <string name="zipCodeHintEdit">CEP</string>
    <string name="districtHintEdit">BAIRRO</string>
    <string name="streetHintEdit">RUA</string>
    <string name="numberHintEdit">NÚMERO</string>
</resources>
