<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Login"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryYellow">

        <ImageView
            android:id="@+id/login_blue_triangle"
            android:layout_width="440dp"
            android:layout_height="440dp"
            android:layout_gravity="bottom"
            android:contentDescription="@string/blue_triangle_description"
            android:rotation="208"
            android:scaleType="fitXY"
            android:translationX="25dp"
            android:translationY="110dp"
            app:srcCompat="@drawable/blue_triangle" />

        <ImageView
            android:id="@+id/login_pink_triangle"
            android:layout_width="440dp"
            android:layout_height="420dp"
            android:layout_gravity="top"
            android:contentDescription="@string/pink_triangle_description"
            android:rotation="25"
            android:scaleType="fitXY"
            android:translationX="-25dp"
            android:translationY="-110dp"
            app:srcCompat="@drawable/pink_triangle" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="@dimen/circleCardViewHight"
                android:layout_height="@dimen/circleCardViewHight"
                app:cardCornerRadius="@dimen/circleCardViewRadius"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/logoDescription"
                    app:srcCompat="@drawable/logo2" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="@dimen/app_name_margin_bottom"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="27sp"
                    android:textStyle="bold"
                    app:fontFamily="@font/quicksand_medium" />
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/rounded_input"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/emilInputHint"
                android:inputType="textEmailAddress"
                android:paddingTop="@dimen/inputTopPadding"
                android:paddingBottom="@dimen/inputBottomPadding"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="20"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/inputTextSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="60dp"
                android:layout_marginRight="60dp"
                android:background="@drawable/rounded_input"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/passwordInputHint"
                android:inputType="textPassword"
                android:paddingTop="@dimen/inputTopPadding"
                android:paddingBottom="@dimen/inputBottomPadding"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="20"
                android:textColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/inputTextSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailInput" />

            <Button
                android:id="@+id/forgetPasswordButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transparent_button"
                android:text="@string/forgetPasswordText"
                android:textAllCaps="false"
                android:textSize="@dimen/smallTextSize"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput"
                tools:text="@string/forgetPasswordText" />

            <Button
                android:id="@+id/getInButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:background="@drawable/rounded_button"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/inButton"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/defaultTextButtonSize"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

            <ProgressBar
                android:id="@+id/loadingLogin"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/getInButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</androidx.cardview.widget.CardView>