<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryYellow"
    tools:context=".activity.LiquidActivity">


    <Button
        android:id="@+id/liquidBackButton"
        style="?attr/buttonBarButtonStyle"
        android:layout_width="@dimen/arrowButtonWidth"
        android:layout_height="@dimen/arrowButtonHigth"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/blue_arrow_vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewLiquid"
        android:layout_width="135dp"
        android:layout_height="@dimen/topCardViewHight"
        android:translationY="@dimen/topCardViewTranslationY"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/stepInsideCardViewWidth"
            android:layout_height="@dimen/stepInsideCardViewHight"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/insideCardViewMarginButton"
            app:cardCornerRadius="45dp">

            <ImageView
                android:id="@+id/imageViewLiquid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/logoDescription"
                android:src="@drawable/liquid" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="190dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/liquidPageTitle"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/stepPageTitleSize"
        android:textStyle="bold"
        app:fontFamily="@font/quicksand_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solidPageSubtitle"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/optionTextSize"
        android:textStyle="bold"
        app:fontFamily="@font/quicksand_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:gravity="center"
        android:text="@string/solidPageDescription"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/stepDescriptionTextSize"
        android:textStyle="normal"
        app:fontFamily="@font/quicksand_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <Button
        android:id="@+id/liquidStartButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:background="@drawable/rounded_button_step"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/letsGoStepButton"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="33sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

</androidx.constraintlayout.widget.ConstraintLayout>